# project-rV5P74d8

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: address_book_data_management.py  commands.py  decorators.py  exceptions.py  main.py  pyproject.toml  render_table.py  save_data_management.py  validations.py
src/cli_commands/: address_commands.py  birthday_commands.py  commands_dict.py  contact_commands.py  email_commands.py  help.py  note_commands.py  phone_commands.py
src/enums/: command_enum.py  saving_data_file_enum.py
src/models/: address.py  address_book.py  birthday.py  email.py  field.py  name.py  note.py  note_book.py  phone.py  record.py  tag.py
src/ui/: decorators.py  normalize_tag.py  render_notes_list.py
src/utils/: command_completer.py  parse_input.py
